<resources>
    <string name="app_name">DesafioMarvelHQs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_background">splash screen background</string>
    <string name="marvel_logo">marvel logo</string>
    <string name="welcome_to_the_marvel_hqs">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="comic_image">comic image</string>
    <string name="background_comic_detail">background comic detail</string>
    <string name="arrow_back">arrow back</string>
    <string name="published">Published:</string>
    <string name="price">Price:</string>
    <string name="pages">Pages:</string>
    <string name="price_value">$ %s</string>
    <string name="register">Register</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
</resources>