<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_comics_screen"
    tools:context=".comicdetail.view.ComicDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBackgroundComicDetail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background_comic_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/background_comic_detail" />

        <ImageView
            android:id="@+id/imgArrowBackToComicsScreen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/dm_20dp"
            android:layout_marginTop="@dimen/dm_20dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/arrow_back" />

        <ImageView
            android:id="@+id/imgComicDetail"
            android:layout_width="98dp"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/dm_20dp"
            android:layout_marginTop="@dimen/dm_120dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/comic_image" />

        <TextView
            android:id="@+id/txtTitleComicDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_30dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/dm_16dp"
            android:textSize="@dimen/dm_22sp"
            app:layout_constraintTop_toBottomOf="@+id/imgBackgroundComicDetail"
            tools:text="AMAZING SPIDER MAN" />

        <TextView
            android:id="@+id/txtDescriptionComicDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dm_16dp"
            android:textColor="@color/comic_details_text_color"
            android:textSize="@dimen/dm_18sp"
            android:layout_marginTop="@dimen/dm_30dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleComicDetail"
            tools:text="AMAZING SPIDER MAN" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm_16dp"
            android:layout_marginTop="@dimen/dm_20dp"
            android:text="@string/published"
            android:textColor="@color/white"
            android:textSize="@dimen/dm_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescriptionComicDetail" />

        <TextView
            android:id="@+id/txtPublishedComicDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/dm_20dp"
            android:layout_marginEnd="@dimen/dm_16dp"
            android:textColor="@color/comic_details_text_color"
            android:textSize="@dimen/dm_18sp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/txtDescriptionComicDetail"
            tools:text="April 30, 2014" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm_16dp"
            android:layout_marginTop="@dimen/dm_8dp"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="@dimen/dm_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/txtPriceComicDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/dm_16dp"
            android:layout_marginTop="@dimen/dm_8dp"
            android:textColor="@color/comic_details_text_color"
            android:textSize="@dimen/dm_18sp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/txtPublishedComicDetail"
            tools:text="$ 5.99" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dm_16dp"
            android:layout_marginTop="@dimen/dm_8dp"
            android:layout_marginBottom="40dp"
            android:text="@string/pages"
            android:textColor="@color/white"
            android:textSize="@dimen/dm_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/txtPagesComicDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/dm_8dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/comic_details_text_color"
            android:textSize="@dimen/dm_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/txtPriceComicDetail"
            tools:text="38" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>